# daimon-templates

./: README.md  celery_worker.py  how-to.md  main.py  requirements.txt  schemas.py  utils.py
templates/chat/: README.md  pyproject.toml
templates/chat/chat/: component.yaml  main.py  schema.py
templates/hello-world-1/: pyproject.toml
templates/hello-world-1/hello_world_1/: main.py
templates/hello-world-2/: pyproject.toml
templates/hello-world-2/hello_world_2/: main.py
templates/research-assistant/: main.py  pip_requirements.txt  pyproject.toml  search.py  writer.py
templates/research-assistant/research_assistant/: main.py  prompt.py  schema.py  search.py  utils.py  writer.py
templates/run-ollama/: pyproject.toml
templates/run-ollama/run_ollama/: main.py  schema.py
templates/skeleton-of-thought/: main.py  pyproject.toml
templates/skeleton-of-thought/skeleton_of_thought/: main.py  schema.py  utils.py
templates/synthesizer/: pyproject.toml
templates/synthesizer/synthesizer/: main.py
templates/tabular-synthetic-data/: pyproject.toml
templates/tabular-synthetic-data/tabular_synthetic_data/: main.py  prompt.py  schema.py  utils.py
templates/template1/: main.py  schema.py  utils.py
templates/template2/: main.py
tests/: checks.ipynb
