[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    { include = "research_assistant", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.8"
langchain-core = "^0.1.5"
requests = "^2.31.0"
bs4 = "^0.0.1"
openai = "^1.6.1"
duckduckgo-search = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
