[tool.poetry]
name = "synthesizer"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sciphi-synthesizer = "^1.0.5"
agent-search = "^0.0.7"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
openai = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
