[tool.poetry]
name = "tabular-synthetic-data"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tabular_synthetic_data", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
openai = "^1.7.0"
langchain-community = "^0.0.11"
langchain-openai = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
